<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/brown"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/img_time"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:backgroundTint="@color/brown"
            app:tint="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_main"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:layout_gravity="center"
            />


    </LinearLayout>

    <ImageView
        android:id="@+id/img_time"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/navbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/img_heart"
        app:layout_constraintBottom_toTopOf="@id/text_time"
        android:src="@drawable/ic_time"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:tint="@color/brown"
        />
    <ImageView
        android:id="@+id/img_heart"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/navbar"
        app:layout_constraintStart_toEndOf="@id/img_time"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/text_bpm"
        app:tint="@color/brown"
        />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_time"
        app:layout_constraintTop_toBottomOf="@id/img_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_bpm"
        />
    <TextView
        android:id="@+id/text_bpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bpm"
        app:layout_constraintTop_toBottomOf="@id/img_heart"
        app:layout_constraintStart_toEndOf="@id/text_time"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/brown"
        app:layout_constraintTop_toBottomOf="@id/text_time"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="26dp"
        app:layout_constraintBottom_toTopOf="@id/text_revenue"
        />
    
    <TextView
        android:id="@+id/text_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_revenue"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/text_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ingredients"
        app:layout_constraintTop_toBottomOf="@id/text_revenue"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        />

    <ImageButton
        android:id="@+id/img_arrow1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintTop_toBottomOf="@id/text_ingredients"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        />

    <ImageButton
        android:id="@+id/img_arrow2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintTop_toBottomOf="@id/img_arrow1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        />

    <ImageButton
        android:id="@+id/img_arrow3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintTop_toBottomOf="@id/img_arrow2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ingredient_one"
        app:layout_constraintStart_toEndOf="@id/img_arrow1"
        app:layout_constraintTop_toTopOf="@id/img_arrow1"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ingredient_two"
        app:layout_constraintStart_toEndOf="@id/img_arrow2"
        app:layout_constraintTop_toTopOf="@id/img_arrow2"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ingredient_three"
        app:layout_constraintStart_toEndOf="@id/img_arrow3"
        app:layout_constraintTop_toTopOf="@id/img_arrow3"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        />


</androidx.constraintlayout.widget.ConstraintLayout>